; ModuleID = '/home/carl/AnghaBench/openssl/engines/extr_e_afalg.c_get_cipher_handle.c'
source_filename = "/home/carl/AnghaBench/openssl/engines/extr_e_afalg.c_get_cipher_handle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cbc_handle = common dso_local global i32* null, align 8
@AES_CBC_128 = common dso_local global i64 0, align 8
@AES_CBC_192 = common dso_local global i64 0, align 8
@AES_CBC_256 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @get_cipher_handle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_cipher_handle(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %17 [
    i32 130, label %5
    i32 129, label %9
    i32 128, label %13
  ]

5:                                                ; preds = %1
  %6 = load i32*, i32** @cbc_handle, align 8
  %7 = load i64, i64* @AES_CBC_128, align 8
  %8 = getelementptr inbounds i32, i32* %6, i64 %7
  store i32* %8, i32** %2, align 8
  br label %18

9:                                                ; preds = %1
  %10 = load i32*, i32** @cbc_handle, align 8
  %11 = load i64, i64* @AES_CBC_192, align 8
  %12 = getelementptr inbounds i32, i32* %10, i64 %11
  store i32* %12, i32** %2, align 8
  br label %18

13:                                               ; preds = %1
  %14 = load i32*, i32** @cbc_handle, align 8
  %15 = load i64, i64* @AES_CBC_256, align 8
  %16 = getelementptr inbounds i32, i32* %14, i64 %15
  store i32* %16, i32** %2, align 8
  br label %18

17:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %18

18:                                               ; preds = %17, %13, %9, %5
  %19 = load i32*, i32** %2, align 8
  ret i32* %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
